Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-56045

CDC: Missing documented stats kv_ep_magma_history_time_evicted_bytes and kv_ep_magma_compactions

    XMLWordPrintable

Details

    • Untriaged
    • 0
    • Yes

    Description

      Whilst reviewing (and testing) the documentation for change-streams I noted that the following statistic, which is in the code and documentation was not being returned.

      • kv_ep_magma_history_time_evicted_bytes
      • kv_ep_magma_compactions stats

      This has been tracked down to a coding error in a list of strings which make up the list of valid magma stats.

         constexpr std::array<std::string_view, 53> statNames = {
                  {"magma_HistorySizeBytesEvicted",
                   "magma_HistoryTimeBytesEvicted"  <--- missing comma
                   "magma_NCompacts",
      

      Note the missing comma is the error, which also impacts on magma_NCompacts

      The fix is to add a comma

      This is a regression for the kv_ep_magma_compactions stat

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jwalker Jim Walker
            jwalker Jim Walker
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty