MB-56045: Fix for two missing magma stats in doEngineStatsMagma

A missing comma means two stat strings are glued into one, causing
silent lookup failures.

Testing now expanded to cover this code path for magma.

Change-Id: I9631b95dfd775a08db6cfa9dad57060ff15d13b8
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/188505
Well-Formed: Restriction Checker
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Jim Walker <jim@couchbase.com>